--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,7 @@
         <dependency>
             <groupId>com.lowagie</groupId>
             <artifactId>itext</artifactId>
-            <version>[1.02b,2.1.7]</version>
+            <version>2.1.7.js4</version>
             <scope>compile</scope>
         </dependency>
 
